--- a/styles/Maincss2.module.scss
+++ b/styles/Maincss2.module.scss
@@ -5,24 +5,33 @@
     .shapeAndText{
         position: relative;
         width: 80%;
+        margin: 0 auto;
 
-        .shape{
-            width: 150px;
-            height: 250px;
-            transform: skew(-40deg);
-            background-color: #F8D448;
-            z-index: 1;
+        .shapeBox{
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            position: relative;
+            .shape{
+                width: 150px;
+                height: 250px;
+                clip-path: polygon(0% 0%, 100% 0%, 40% 100%, 0% 100%);
+                background-color: #F8D448;
+                z-index: 1;
+            }
+            .h1Text{
+                position: absolute;
+                top: 50px;
+                left: 50px;
+                color: #263A96;
+                font-size: 24px;
+                z-index: 2;
+                font-size: 200px;
+                font-weight: bold;
+            }
         }
-        .h1Text{
-            top: 50px;
-            left: 50px;
-            color: #263A96;
-            font-size: 24px;
-            z-index: 2;
-            position: absolute;
-            font-size: 200px;
-            font-weight: bold;
-        }
+        
+       
     }
 
 }
