scroll event Hold it

--- a/styles/Projectcss.module.scss
+++ b/styles/Projectcss.module.scss
@@ -93,6 +93,7 @@
                     top: 60%;
                     font-weight: bold;
                     font-style: italic;
+                    z-index: 2;
                 }
                 .skillBox{
                     position: relative;
