--- a/styles/Maincss.module.scss
+++ b/styles/Maincss.module.scss
@@ -1,47 +1,61 @@
-.mainFlex{
-    height: 90vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: red;
-    flex-direction: column;
+.mainFlex {
     width: 100%;
-    .textAndbox{
-        .frontend{
-            font-size: 200px;
-            font-weight: bold;
-            color: #263A96;
-            z-index: 2;
+    height: 90vh;
+
+    .shapeAndText {
+        position: relative;
+        width: 80%;
+        margin: 0 auto;
+        top: 30%;
+
+        .shapeBox {
+            width: 100%;
+            display: flex;
+            justify-content: center;
             position: relative;
-        }
-        .box{
-            width: 150px;
-            height: 250px;
-            transform: skew(-40deg);
-            background-color: #F8D448;
-            z-index: 1;
-            position: absolute;
-            top: 43%;
-            left: 47%;
 
+            .shape {
+                width: 400px;
+                height: 320px;
+                clip-path: polygon(60% 0%, 100% 0%, 40% 100%, 0% 100%);
+                background-color: #F8D448;
+                z-index: 1;
+            }
+
+            .h1Text {
+                position: absolute;
+                color: #263A96;
+                font-size: 24px;
+                z-index: 2;
+                font-size: 200px;
+                font-weight: bold;
+            }
         }
-    }
-    .textAndmyname{
-        width: 33%;
-        background-color: #F8D448;
-        .text{
-            color: #263A96;
-        }
-        .myname{
-            color: #263A96;
-        }
-    }
-    .test1{
-        width: 65%;
-        display: flex;
-        justify-content: flex-end;
+
 
     }
-  
-    
+
+    .whoamI {
+        width: 18%;
+        top: 30%;
+        position: relative;
+        left: 55%;
+        color: #263A96;
+
+        .aspiration {
+            font-size: 16px;
+            font-weight: 400;
+        }
+
+        .myName {
+            font-weight: bold;
+
+            &::after {
+                content: '/ 프론트엔드 개발자';
+                font-weight: 100;
+            }
+        }
+
+    }
+
 }
