--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,4 +7,13 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  overflow-y: hidden;
+}
+main{
+  height: 100vh;
+  overflow-y: auto;
+  
+}
+main::-webkit-scrollbar {
+  display: none;
 }
