--- a/styles/Aboutcss.module.scss
+++ b/styles/Aboutcss.module.scss
@@ -12,10 +12,21 @@
         top: 10%;
 
         .text {
+            position: absolute;
             color: #263A96;
             font-size: 44px;
             font-weight: bold;
-
+            z-index: 1;
+            &::after{
+                position: absolute;
+                top: 50%;
+                content: '';
+                display: block;
+                width: 100%;
+                height: 50%;
+                background-color: #F8D448;
+                z-index: -1;
+            }
         }
 
     }
@@ -23,6 +34,7 @@
     .aboutBox {
         display: flex;
         width: 77%;
+        height: 50%;
         background-color: #F7F8FC;
         margin: 0 auto;
         top: 25%;
@@ -33,6 +45,7 @@
         .leftBox {
             width: 50%;
             margin: 0 auto;
+            display: flex;
 
             .imgBox {
                 width: 100%;
