--- a/styles/Aboutcss.module.scss
+++ b/styles/Aboutcss.module.scss
@@ -1,6 +1,5 @@
 .sectionBox {
     width: 100%;
-    background-color: paleturquoise;
     height: 100vh;
 
     .textBox {
@@ -43,17 +42,18 @@
         box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
 
         .leftBox {
-            width: 50%;
+            width: 30%;
             margin: 0 auto;
             display: flex;
-
+            justify-content: center;
+            align-items: center;
             .imgBox {
-                width: 100%;
+                width: 80%;
                 display: flex;
                 justify-content: center;
                 align-items: center;
                 .myImg {
-                    width: 50%;
+                    width: 70%;
                     border-radius: 20px;
 
                 }
@@ -62,7 +62,7 @@
         }
 
         .rightBox {
-            width: 50%;
+            width: 70%;
             display: flex;
             flex-direction: column;
             justify-content: space-evenly;
