--- a/styles/Skillscss.module.scss
+++ b/styles/Skillscss.module.scss
@@ -1,8 +1,7 @@
 .sectionBox {
     width: 100%;
     height: 100vh;
-
-    .textBox {
+    .h2Box {
         top: 20%;
         width: 100%;
         display: flex;
@@ -10,7 +9,7 @@
         position: relative;
         top: 10%;
 
-        .text {
+        .h2text {
             position: absolute;
             color: #263A96;
             font-size: 44px;
@@ -27,8 +26,53 @@
                 z-index: -1;
             }
         }
-
     }
+    .skillBox{
+        max-width: 77%;
+        position: relative;
+        margin: 0 auto;
+        top: 25%;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        flex-wrap: wrap;
+        gap: 1px;
+        .skill{
+            background-color: #F7F8FC;
+            width: 24%;
+            position: relative;
+            border-radius: 20px;
+            box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.2);
+
+            .imgBox{
+                position: absolute;
+                width: 50%;
+                left: 25%;
+                top: -20%;
+                img{
+                width: 100%;                    
+                }
+            }
+        
+            .textBox{
+                text-align: center;
+                h3{
+                    color: #263A96;
+                    font-size: 24px;
+                    padding: 30% 0;
+                }
+                .text{
+                    color: #263A96;
+                    font-size: 20px;
+                    padding-bottom: 40px;
+
+                }
+                
+
+            }
+        }
+    }
+
     .skillsBox{
         display: flex;
         width: 77%;
@@ -38,6 +82,6 @@
         top: 25%;
         position: relative;
         border-radius: 20px;
-        box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
+        box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.2);
     }
 }
