--- a/styles/Aboutcss.module.scss
+++ b/styles/Aboutcss.module.scss
@@ -3,12 +3,12 @@
     height: 100vh;
 
     .textBox {
-        top: 20%;
         width: 100%;
         display: flex;
         justify-content: center;
         position: relative;
-        top: 10%;
+        padding-top: 10%;
+        padding-bottom: 15%;
 
         .text {
             position: absolute;
@@ -36,10 +36,10 @@
         height: 50%;
         background-color: #F7F8FC;
         margin: 0 auto;
-        top: 25%;
         position: relative;
         border-radius: 20px;
         box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.2);
+        padding: 1.25rem;
 
         .leftBox {
             width: 30%;
@@ -47,17 +47,13 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            .imgBox {
-                width: 80%;
-                display: flex;
-                justify-content: center;
-                align-items: center;
+            
                 .myImg {
                     width: 70%;
                     border-radius: 20px;
 
                 }
-            }
+            
 
         }
 
