--- a/styles/Skillscss.module.scss
+++ b/styles/Skillscss.module.scss
@@ -1,13 +1,12 @@
 .sectionBox {
     width: 100%;
-    height: 100vh;
     .h2Box {
-        top: 20%;
         width: 100%;
         display: flex;
         justify-content: center;
         position: relative;
-        top: 10%;
+        padding-top: 10%;
+        padding-bottom: 15%;
 
         .h2text {
             position: absolute;
@@ -31,31 +30,47 @@
         max-width: 77%;
         position: relative;
         margin: 0 auto;
-        top: 25%;
         display: flex;
         justify-content: space-around;
         align-items: center;
         flex-wrap: wrap;
-        gap: 1px;
+        gap: 7px;
         .skill{
             background-color: #F7F8FC;
-            width: 24%;
+            width: 20%;
             position: relative;
             border-radius: 20px;
-            box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.2);
-
+            box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
+            margin-bottom: 10%;
+            padding: 20px;
             .imgBox{
                 position: absolute;
-                width: 50%;
-                left: 25%;
-                top: -20%;
+                width: 6.25rem;
+                height: 6.25rem;
+                left: 50%;
+                transform: translate(-50%,-70%);
+                background-color: #F7F8FC;
+                border-radius: 50%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
+            padding: 10px;
+
                 img{
-                width: 100%;                    
+                width: 100%;   
+                max-height: 100%;
+                object-fit: contain;
                 }
             }
         
             .textBox{
-                text-align: center;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                margin: 0 auto;
+                width: 80%;
                 h3{
                     color: #263A96;
                     font-size: 24px;
@@ -63,7 +78,7 @@
                 }
                 .text{
                     color: #263A96;
-                    font-size: 20px;
+                    font-size: 16px;
                     padding-bottom: 40px;
 
                 }
@@ -73,15 +88,18 @@
         }
     }
 
-    .skillsBox{
+    .otherskillsBox{
         display: flex;
-        width: 77%;
-        height: 50%;
-        background-color: #F7F8FC;
+        max-width: 77%;
+        height: 500px;
+        background-color: burlywood;
         margin: 0 auto;
         top: 25%;
         position: relative;
         border-radius: 20px;
-        box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.2);
+        box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
+        .otherImgText{
+            
+        }
     }
 }
