--- a/styles/Aboutcss.module.scss
+++ b/styles/Aboutcss.module.scss
@@ -13,7 +13,7 @@
         .text {
             position: absolute;
             color: #263A96;
-            font-size: 44px;
+            font-size: 100px;
             font-weight: bold;
             z-index: 1;
             &::after{
@@ -62,6 +62,7 @@
             display: flex;
             flex-direction: column;
             justify-content: space-evenly;
+            word-break: keep-all;
 
             .myName {
                 color: #263A96;
@@ -80,6 +81,7 @@
                 font-size: 20px;
                 font-weight: 400;
                 width: 80%;
+
             }
         }
     }
