--- a/styles/Aboutcss.module.scss
+++ b/styles/Aboutcss.module.scss
@@ -16,6 +16,8 @@
             font-size: 100px;
             font-weight: bold;
             z-index: 1;
+  font-family: 'Pretendard-Regular';
+            
             &::after{
                 position: absolute;
                 top: 50%;
