--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,10 @@
+@font-face {
+  font-family: 'Pretendard-Regular';
+  src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+}
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -8,6 +15,8 @@ body {
   max-width: 100vw;
   overflow-x: hidden;
   overflow-y: hidden;
+  font-family: 'Pretendard-Regular';
+
 }
 main{
   height: 100vh;
