need to add animation when i click a button

--- a/styles/Maincss.module.scss
+++ b/styles/Maincss.module.scss
@@ -20,6 +20,7 @@
                 clip-path: polygon(60% 0%, 100% 0%, 40% 100%, 0% 100%);
                 background-color: #F8D448;
                 z-index: 1;
+                transform: translateY(-7%);
             }
 
             .h1Text {
