need to fix animation , change details

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,16 @@
   font-weight: 400;
   font-style: normal;
 }
+@keyframes fadein{
+  0% {
+    background-color: black;
+    transform: translate3d(0, 100%, 0);
+}
+ 100%{
+  background-color: white;
+    transform: translateZ(0);
+}
+}
 
 * {
   box-sizing: border-box;
@@ -25,4 +35,8 @@ main{
 }
 main::-webkit-scrollbar {
   display: none;
+}
+
+.animate {
+  animation: fadein 0.5s;
 }
