--- a/styles/Newprojectscss.module.scss
+++ b/styles/Newprojectscss.module.scss
@@ -1,14 +1,4 @@
-@keyframes fadein{
-    0%{
-      transform: translateY(800px);
-      opacity: 0;
-    }
-    100%{
-      transform: none;
-      opacity: 1;
 
-    }
-}
 
 .sectionBox {
     width: 100%;
@@ -22,44 +12,63 @@
         background-color: #344AB1;
         position: relative;
         padding: 40px;
-
+       
         .textBox {
             width: 66%;
             margin: 0 auto;
             top: 15%;
             position: relative;
-        .animate{
-            animation: fadein 0.5s ease-in-out;
 
-        }
+            .animate {
+                background-color: #F8D448;
+                animation: fadein 0.5s ease-in-out;
+
+            }
+            @keyframes fadein{
+                0% {
+                    transform: translateY(800px);
+                }
+                100% {
+                    transform: none;
+                }
+            }
+            &::animate {
+                background-color: #F8D448;
+                animation: fadein 0.5s ease-in-out;
+
+            }
+           
 
 
-            .pjName{
+            .pjName {
                 white-space: nowrap;
                 font-size: 100px;
                 font-weight: 700;
                 color: #F8D448;
-            word-break: keep-all;
-            z-index: 2;
-            position: relative;
+                word-break: keep-all;
+                z-index: 2;
+                position: relative;
 
             }
-            .pjDetail{
+
+            .pjDetail {
                 line-height: 2.75rem;
                 font-size: 20px;
-            word-break: keep-all;
-            color: #fff;
-            margin: 10% 0 10% 0;
+                word-break: keep-all;
+                color: #fff;
+                margin: 10% 0 10% 0;
 
 
             }
-            .pjSkill{
+
+            .pjSkill {
                 font-size: 16px;
                 color: #fff;
 
 
             }
-            .gotoProject{
+
+            .gotoProject {
                 border: 1px solid #fff;
                 display: flex;
                 justify-content: center;
@@ -70,7 +79,8 @@
                 color: #fff;
                 margin-top: 20%;
                 cursor: pointer;
-                &:active{
+
+                &:active {
                     background-color: #F8D448;
                     color: #344AB1;
                 }
