--- a/styles/Maincss.module.scss
+++ b/styles/Maincss.module.scss
@@ -26,7 +26,6 @@
             .h1Text {
                 position: absolute;
                 color: #263A96;
-                font-size: 24px;
                 z-index: 2;
                 font-size: 200px;
                 font-weight: bold;
@@ -56,7 +55,68 @@
                 font-weight: 100;
             }
         }
-
     }
 
+}
+
+//테블릿 
+@media screen and (max-width:1024px) {
+.mainFlex {
+    max-width:1024px;
+    .shapeAndText {
+
+        .shapeBox {
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            position: relative;
+            .shape {
+                width: 200px;
+                height: 160px;
+            }
+            .h1Text {
+                font-size: 100px;
+            }
+        }
+    }
+    .whoamI {
+        width: 40%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        margin: 0 auto;
+        left: 0;
+        top: 35%;
+
+        .aspiration {
+            font-size: 20px;
+        }
+        .myName {
+            font-size: 20px;
+        }
+    }
+}
+
+    
+}
+@media screen and (max-width:768px) {
+    .mainFlex {
+        max-width:768px;
+        .shapeAndText {
+    
+            .shapeBox {
+                .shape {
+                    width: 160px;
+                    height: 128px;
+                }
+                .h1Text {
+                    font-size: 80px;
+                }
+            }
+        }
+        .whoamI {
+            width: 80%;
+        }
+    }
 }
