--- a/styles/Skillscss.module.scss
+++ b/styles/Skillscss.module.scss
@@ -1,5 +1,6 @@
 .sectionBox {
     width: 100%;
+
     .h2Box {
         width: 100%;
         display: flex;
@@ -14,7 +15,8 @@
             font-size: 100px;
             font-weight: bold;
             z-index: 1;
-            &::after{
+
+            &::after {
                 position: absolute;
                 top: 50%;
                 content: '';
@@ -26,7 +28,8 @@
             }
         }
     }
-    .skillBox{
+
+    .skillBox {
         max-width: 77%;
         position: relative;
         margin: 0 auto;
@@ -35,8 +38,8 @@
         align-items: center;
         flex-wrap: wrap;
         gap: 6.3%;
-        
-        .skill{
+
+        .skill {
             background-color: #F7F8FC;
             width: 20%;
             position: relative;
@@ -44,66 +47,118 @@
             box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
             margin-bottom: 10%;
             padding: 3%;
-            .imgBox{
+
+            .imgBox {
                 position: absolute;
                 width: 6.25rem;
                 height: 6.25rem;
                 left: 50%;
-                transform: translate(-50%,-80%);
+                transform: translate(-50%, -80%);
                 background-color: #F7F8FC;
                 border-radius: 50%;
                 display: flex;
                 justify-content: center;
                 align-items: center;
-            box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
-            padding: 10px;
+                box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
+                padding: 10px;
 
-                img{
-                width: 100%;   
-                max-height: 100%;
-                object-fit: contain;
+                img {
+                    width: 100%;
+                    max-height: 100%;
+                    object-fit: contain;
                 }
             }
-        
-            .textBox{
+
+            .textBox {
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
                 align-items: center;
                 margin: 0 auto;
                 width: 80%;
-                h3{
+
+                h3 {
                     color: #263A96;
                     font-size: 24px;
                     padding: 30% 0;
                 }
-                .text{
+
+                .text {
                     color: #263A96;
                     font-size: 16px;
                     padding-bottom: 40px;
-            word-break: keep-all;
+                    word-break: keep-all;
 
 
 
                 }
-                
 
             }
         }
     }
 
-    .otherskillsBox{
-        display: flex;
-        max-width: 77%;
-        height: 500px;
-        background-color: burlywood;
-        margin: 0 auto;
-        top: 25%;
-        position: relative;
-        border-radius: 20px;
-        box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
-        .otherImgText{
-            
+}
+
+@media screen and (max-width:1024px) {
+
+
+
+    .sectionBox {
+        max-width: 1024px;
+        height: auto;
+
+        .h2Box {
+            .h2text {
+                font-size: 80px;
+            }
         }
+
+        .skillBox {
+            margin-top: 10%;
+
+            .skill {
+                width: 46%;
+
+                .textBox {
+                    .text {
+                        text-align: center;
+                    }
+                }
+            }
+        }
+
     }
+
+}
+
+@media screen and (max-width:768px) {
+
+    .sectionBox {
+        max-width: 768px;
+        height: auto;
+
+        .h2Box {
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            position: relative;
+            padding-top: 10%;
+            padding-bottom: 15%;
+
+
+        }
+
+        .skillBox {
+            margin-top: 25%;
+
+            .skill {
+                margin-top: 20%;
+                width: 100%;
+
+
+            }
+        }
+
+    }
+
 }
