--- a/styles/Newprojectscss.module.scss
+++ b/styles/Newprojectscss.module.scss
@@ -1,5 +1,3 @@
-
-
 .sectionBox {
     width: 100%;
     height: 100vh;
@@ -73,4 +71,157 @@
         width: 60%;
         position: relative;
     }
+}
+
+@media screen and (max-width:1024px) {
+
+    .sectionBox {
+        max-width: 1024px;
+        height: auto;
+        background-color: #344AB1;
+        flex-direction: column-reverse;
+        .leftBox {
+            width: 100%;
+            background-color: #344AB1;
+            position: relative;
+            padding: 40px;
+           
+            .textBox {
+                width: 66%;
+                margin: 0 auto;
+                top: 15%;
+                position: relative;
+    
+                .pjName {
+                    white-space: nowrap;
+                    font-size: 80px;
+                    font-weight: 700;
+                    color: #F8D448;
+                    word-break: keep-all;
+                    z-index: 2;
+                    position: relative;
+                    text-align: center;
+    
+                }
+    
+                .pjDetail {
+                    line-height: 2.75rem;
+                    font-size: 20px;
+                    word-break: keep-all;
+                    color: #fff;
+                    margin: 10% 0 10% 0;
+                    text-align: center;
+    
+    
+                }
+    
+                .pjSkill {
+                    font-size: 16px;
+                    color: #fff;
+                    text-align: center;
+
+    
+                }
+    
+                .gotoProject {
+                    margin: 0 auto;
+                    margin-top: 10%;
+                  
+    
+                    &:active {
+                        background-color: #F8D448;
+                        color: #344AB1;
+                    }
+    
+                }
+    
+            }
+    
+        }
+    
+        .rightBox {
+            width: 100%;
+            position: relative;
+            height: auto;
+            .mySwiper{
+                display: none;
+            }
+        }
+    }
+
+
+    
+}
+
+@media screen and (max-width:768px) {
+
+    .sectionBox {
+        max-width: 768px;
+    .leftBox {
+        width: 40%;
+        background-color: #344AB1;
+        position: relative;
+        padding: 40px;
+       
+        .textBox {
+            width: 66%;
+            margin: 0 auto;
+            top: 15%;
+            position: relative;
+
+            .pjName {
+                white-space: nowrap;
+                font-size: 100px;
+                font-weight: 700;
+                color: #F8D448;
+                word-break: keep-all;
+                z-index: 2;
+                position: relative;
+
+            }
+
+            .pjDetail {
+                line-height: 2.75rem;
+                font-size: 20px;
+                word-break: keep-all;
+                color: #fff;
+                margin: 10% 0 10% 0;
+
+
+            }
+
+            .pjSkill {
+                font-size: 16px;
+                color: #fff;
+
+            }
+
+            .gotoProject {
+                border: 1px solid #fff;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                font-size: 20px;
+                width: 12.5rem;
+                height: 3.125rem;
+                color: #fff;
+                margin-top: 20%;
+                cursor: pointer;
+
+                &:active {
+                    background-color: #F8D448;
+                    color: #344AB1;
+                }
+
+            }
+
+        }
+
+    }
+
+    .rightBox {
+        width: 60%;
+        position: relative;
+    }
+}
 }
