--- a/styles/Skillscss.module.scss
+++ b/styles/Skillscss.module.scss
@@ -144,6 +144,9 @@
             position: relative;
             padding-top: 10%;
             padding-bottom: 15%;
+            .h2text{
+                font-size: 60px;
+            }
 
 
         }
