--- a/styles/Skillscss.module.scss
+++ b/styles/Skillscss.module.scss
@@ -40,6 +40,7 @@
         gap: 6.3%;
 
         .skill {
+            min-height: 300px;
             background-color: #F7F8FC;
             width: 20%;
             position: relative;
