--- a/styles/Newprojectscss.module.scss
+++ b/styles/Newprojectscss.module.scss
@@ -29,7 +29,7 @@
             }
 
             .pjDetail {
-                line-height: 2.75rem;
+                line-height: 1.5;
                 font-size: 20px;
                 word-break: keep-all;
                 color: #fff;
@@ -70,6 +70,15 @@
     .rightBox {
         width: 60%;
         position: relative;
+
+        .bigImg{
+            width: 100%;
+            object-fit: cover;
+            height: 100vh;
+        }
+        .smallImg{
+            width: 100%;
+        }
     }
 }
 
@@ -143,9 +152,11 @@
             width: 100%;
             position: relative;
             height: auto;
-            .mySwiper{
-                display: none;
-            }
+            .bigImg{
+            width: 100%;
+            object-fit: cover;
+            height: auto
+        }
         }
     }
 
@@ -158,70 +169,35 @@
     .sectionBox {
         max-width: 768px;
     .leftBox {
-        width: 40%;
-        background-color: #344AB1;
-        position: relative;
-        padding: 40px;
+        width: 100%;
        
         .textBox {
-            width: 66%;
+            width: 100%;
             margin: 0 auto;
             top: 15%;
             position: relative;
 
             .pjName {
-                white-space: nowrap;
-                font-size: 100px;
-                font-weight: 700;
-                color: #F8D448;
-                word-break: keep-all;
-                z-index: 2;
-                position: relative;
+                font-size: 28px;
+                text-align: center;
+                margin-bottom: 10%;
 
             }
 
             .pjDetail {
-                line-height: 2.75rem;
-                font-size: 20px;
-                word-break: keep-all;
-                color: #fff;
-                margin: 10% 0 10% 0;
+                display: none;
 
 
             }
 
-            .pjSkill {
-                font-size: 16px;
-                color: #fff;
 
-            }
-
-            .gotoProject {
-                border: 1px solid #fff;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                font-size: 20px;
-                width: 12.5rem;
-                height: 3.125rem;
-                color: #fff;
-                margin-top: 20%;
-                cursor: pointer;
-
-                &:active {
-                    background-color: #F8D448;
-                    color: #344AB1;
-                }
-
-            }
 
         }
 
     }
 
     .rightBox {
-        width: 60%;
-        position: relative;
+        width: 100%;
     }
 }
 }
