--- a/styles/Aboutcss.module.scss
+++ b/styles/Aboutcss.module.scss
@@ -1,3 +1,6 @@
+$tablet : 1024px;
+$mobile : 768px;
+
 .sectionBox {
     width: 100%;
     height: 100vh;
@@ -90,9 +93,9 @@
 
 
 //테블릿
-@media screen and (max-width:1024px) {
+@media screen and (max-width: $tablet) {
     .sectionBox {
-        max-width: 1024px;
+        max-width: $tablet;
         height: auto;
 
         .textBox {
