--- a/styles/globals.css
+++ b/styles/globals.css
@@ -24,6 +24,30 @@
 
   }
 }
+@keyframes linedown{
+  0%{
+
+  }
+  100%{
+    transform: translateY(0.9rem) rotate(-45deg);
+  }
+}
+@keyframes lineup{
+  0%{
+
+  }
+  100%{
+
+  }
+}
+@keyframes fadeout{
+  0%{
+    opacity: 1;
+  }
+  100%{
+    opacity: 0;
+  }
+}
 
 * {
   box-sizing: border-box;
@@ -33,14 +57,11 @@
 html,
 body {
   max-width: 100vw;
-  overflow-x: hidden;
-  overflow-y: hidden;
   font-family: 'Pretendard-Regular';
 
 }
 main{
   height: 100vh;
-  overflow-y: auto;
   
 }
 main::-webkit-scrollbar {
@@ -49,6 +70,7 @@ main::-webkit-scrollbar {
 
 .animate {
   animation: fadein 0.5s;
+  z-index: 2;
 }
 
 .swiper-thumbs{
@@ -65,6 +87,20 @@ main::-webkit-scrollbar {
   }
   .animate{
     animation: fadeani 0.5s;
+  }
+  .fadeout{
+    opacity: 0;
+    transition: 0.5s;
+  }
+  .linedown{
+    /* animation: linedown 0.5s; */
+    transform: translateY(0.9rem) rotate(-45deg);
+
+  }
+  .lineup{
+    /* animation: lineup 0.5s; */
+    transform: translateY(-0.4rem) rotate(45deg);
+
   }
   
 }
