--- a/styles/Headcss.module.scss
+++ b/styles/Headcss.module.scss
@@ -104,25 +104,30 @@
                 }
 
             }
+
             .menudown {
                 width: 100%;
                 position: fixed;
                 height: 30vh;
                 left: 0;
-                top: 0;
+                top: -40%;
                 background: hsla(229, 60%, 37%, 0.8);
                 z-index: 5;
                 margin-top: 10vh;
                 display: flex;
                 justify-content: space-around;
                 flex-direction: column;
-                li{
+                transition: 0.5s;
+                opacity: 0;
+
+                li {
                     width: 80%;
                     margin: 0 auto;
                     font-size: 24px;
                     color: white;
                     list-style-type: none;
-                    &::after{
+
+                    &::after {
                         content: '';
                         border-bottom: 1px solid white;
                         width: 100%;
