--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,48 +4,64 @@
   font-weight: 400;
   font-style: normal;
 }
-@keyframes fadein{
+
+@keyframes fadein {
   0% {
     transform: translate3d(0, 100%, 0);
     opacity: 0;
-}
- 100%{
+  }
+
+  100% {
     transform: translateZ(0);
     opacity: 1;
 
+  }
 }
-}
-@keyframes fadeani{
-  0%{
+
+@keyframes fadeani {
+  0% {
     opacity: 0;
   }
-  100%{
+
+  100% {
     opacity: 1;
 
   }
 }
-@keyframes linedown{
-  0%{
 
-  }
-  100%{
+@keyframes linedown {
+  0% {}
+
+  100% {
     transform: translateY(0.9rem) rotate(-45deg);
   }
 }
-@keyframes lineup{
-  0%{
 
-  }
-  100%{
+@keyframes lineup {
+  0% {}
 
-  }
+  100% {}
 }
-@keyframes fadeout{
-  0%{
+
+@keyframes fadeout {
+  0% {
     opacity: 1;
   }
-  100%{
+
+  100% {
     opacity: 0;
+  }
+}
+
+@keyframes menuopen {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+    top: 0;
+
   }
 }
 
@@ -54,16 +70,19 @@
   padding: 0;
   margin: 0;
 }
+
 html,
 body {
   max-width: 100vw;
   font-family: 'Pretendard-Regular';
 
 }
-main{
+
+main {
   height: 100vh;
-  
+
 }
+
 main::-webkit-scrollbar {
   display: none;
 }
@@ -73,7 +92,7 @@ main::-webkit-scrollbar {
   z-index: 2;
 }
 
-.swiper-thumbs{
+.swiper-thumbs {
   position: absolute;
   bottom: 0;
   padding: 5%;
@@ -82,25 +101,36 @@ main::-webkit-scrollbar {
 
 @media screen and (max-width:1024px) {
 
-  .swiper-thumbs{
-    display: none !important ;
+  .swiper-thumbs {
+    display: none !important;
   }
-  .animate{
+
+  .animate {
     animation: fadeani 0.5s;
   }
-  .fadeout{
+
+  .fadeout {
     opacity: 0;
     transition: 0.5s;
   }
-  .linedown{
+
+  .linedown {
     /* animation: linedown 0.5s; */
     transform: translateY(0.9rem) rotate(-45deg);
 
   }
-  .lineup{
+
+  .lineup {
     /* animation: lineup 0.5s; */
     transform: translateY(-0.4rem) rotate(45deg);
 
   }
-  
+
+  .active {
+    opacity: 1 !important;
+    top: 0 !important;
+
+  }
+
+
 }
