--- a/styles/Headcss.module.scss
+++ b/styles/Headcss.module.scss
@@ -126,6 +126,7 @@
                     font-size: 24px;
                     color: white;
                     list-style-type: none;
+                    cursor: pointer;
 
                     &::after {
                         content: '';
